--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-  .my-custom-class {
-    @apply text-white bg-blue-500;
-  }
+body {
+  @apply bg-white text-black dark:bg-neutral-900 dark:text-white;
 }
